# uCaspian

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  dev_r0.pcf  environment.yml  makefile  packet_spec.md  ram_spec.md
docs/: Makefile  conf.py  index.rst
include/: fifo.hpp  packets.hpp
ip/axis_clock_converter/: axis_clock_converter.sv  synchronizer.sv
ip/osresearch/: README.md  fifo.sv  pwm.v  uart.sv  util.vh
ip/spi/: spi.sv  spi_v2.sv  spi_v3.sv  spi_v4.sv
ip/stream/: LICENSE
ip/uart/: LICENSE
pico/serial_spi/: CMakeLists.txt  test.cpp
pico/serial_spi_passthrough/: test.cpp
pico/serial_spi_tester/: start_minicom.sh  (+1 more)
pins/: mimas_a7_rev2.xdc
pytest/: a.py  b.py  c.py  d.py  iris.txt  wine1.txt
python/: basic_test.py  read_bin.py  serial_loopback.py  serial_speed_plot.py  test_func.py  ucaspian.py
rtl/: axis_clock_converter.sv  axon.sv  axon_new.sv  dendrite.sv  dendrite_mux.sv  dev_r0_top.sv  dp_ram.sv  dual_clock_async_fifo_design.sv  dual_clock_async_fifo_design_tb.sv  find_set_bit.sv  find_set_bit_16.sv  fire_dispatch.sv  loopback.sv  mimas_top.sv  neuron.sv  packet_interface.sv  spi.sv  spi_v2.sv  spi_v3.sv  spi_v4.sv  synapse.sv  ucaspian.sv  ucaspian_core.sv  upduino_spi_top.sv  upduino_top.sv  upduino_uart_top.sv  util.sv
scripts/: cfg_test.py  low_latency.sh  mimas.tcl  run_t.py  serial_loopback.py
src/: ucaspian.cpp
sw/rpi_pico/serial_spi_tester/: .gitignore  CMakeLists.txt  make_and_run.sh
syn/: mimas.tcl
tb/: .gitignore  Makefile  ucaspian_tb.sv  ucaspian_wb_tb.gtkw  ucaspian_wb_tb.sv
tests/: a.py
(+25 files in other folders)
